# Presentation-Understanding-Engine

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  IMPLEMENTATION_PLAN.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  sample.pptx
app/: main.py
app/api/: health.py  jobs.py  process.py  websocket.py
app/core/: config.py  exceptions.py  logging.py
app/models/: __init__.py  job.py
app/services/: __init__.py  async_processor.py  job_manager.py  language_utils.py  narration_chain.py  ppt_parser.py  ppt_processor.py  ppt_video_processor.py  qa_chain.py  qa_validator.py  test_narration.py  test_ppt_parser.py  test_ppt_processor.py  test_qa_chain.py  tts_service.py  video_assembler.py  video_stitcher.py
backend/tests/: test_health.py
frontend/: .env.example  Dockerfile  Dockerfile.dev  next.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/processing/[jobId]/: page.tsx
frontend/app/results/[jobId]/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/layout/: Header.tsx
frontend/components/processing/: SlideProgressList.tsx
frontend/components/results/: DownloadPanel.tsx  QuizMode.tsx  SlideViewer.tsx  VideoPlayer.tsx
frontend/components/upload/: DropZone.tsx  LanguageSelector.tsx  OptionSwitch.tsx  SlideSlider.tsx
frontend/hooks/: useJobResult.ts  useJobStatus.ts  useWebSocket.ts
requirements/: requirements.txt
